syntax = "proto3";

package service.pb;

import "grpc-gateway/pb/devices.proto";
import "resource-aggregate/pb/commands.proto";

option go_package = "github.com/plgd-dev/client-application/pb;pb";

message UpdateResourceRequest {
    resourceaggregate.pb.ResourceId resource_id = 1;
    grpcgateway.pb.Content content = 2;
}
